--- a/packages/nx-nest/src/schematics/application/files/package.json.j2
+++ b/packages/nx-nest/src/schematics/application/files/package.json.j2
@@ -1,5 +1,5 @@
 {
-  "name": "<%= packageName %>",
+  "name": "{{ packageName }}",
   "version": "0.0.1",
   "description": "Tailored NestJS NX Based Application Skeleton",
   "author": "Backend <backend@webundsoehne.com>",
