feat(brownie): mostly implemented the docker container add function
still due to fix the template for env and volumes because they are not
really working a hundered percent

--- a/packages/brownie/config/containers/common/env.yml.j2
+++ b/packages/brownie/config/containers/common/env.yml.j2
@@ -1,3 +1,3 @@
-{% if env | length > 0 %}
-{{ { env_file: './' + flags.output + '/' + name + '/' + '.env' } | from_object | to_nice_yaml }}
+{% if env is defined %}
+{{ { env_file: './' + dir + '/' + '.env' } | from_object | to_nice_yaml }}
 {% endif %}
