--- a/packages/brownie/config/containers/common/env.yml.j2
+++ b/packages/brownie/config/containers/common/env.yml.j2
@@ -1,3 +1,3 @@
 {% if env is defined %}
-{{ { env_file: './' + dir + '/' + '.env' } | from_object | to_nice_yaml }}
+{{ { env_file: './' + dir + '/' + '.env' } | to_nice_yaml }}
 {% endif %}
