--- a/packages/nx-nest/src/schematics/application/files/src/server/server.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/server/server.module.ts.j2
@@ -2,9 +2,8 @@ import { MiddlewareConsumer, Module, NestModule, RequestMethod } from '@nestjs/c
 import { APP_FILTER,{% if server == 'restful' %} APP_INTERCEPTOR,{% endif %} APP_PIPE } from '@nestjs/core'
 {% if server == 'graphql' %}
 import { GraphQLModule } from '@nestjs/graphql'
-import { FastifyRequest } from 'fastify'
-import { Http2ServerRequest } from 'http2'
 import { join } from 'path'
+import { graphqlContextParser } from './graphql-setup'
 {% endif %}
 {% if 'typeorm' in database %}
 import { TypeOrmModule } from '@nestjs/typeorm'
@@ -63,9 +62,7 @@ export function createServerModule ({% if database != 'none' %}mock = false{% en
     imports: [
       {% if server == 'graphql' %}GraphQLModule.forRoot({
         autoSchemaFile: join(process.cwd(), '.graphql/schema.gql'),
-        context: async ({ req }: {req: FastifyRequest<Http2ServerRequest>}): Promise<FastifyRequest<Http2ServerRequest> & Record<string, any>> => {
-          return { ...req }
-        },
+        context: graphqlContextParser,
         useGlobalPrefix: true,
         playground: true,
         introspection: true,
