--- a/packages/nx-nest/src/schematics/application/files/package.json.j2
+++ b/packages/nx-nest/src/schematics/application/files/package.json.j2
@@ -7,8 +7,10 @@
   "repository": "<<---REPOSITORYHERE--->>",
   "scripts": {
     "start": "node ./src/main.js",
+    {% if 'command' in components %}
     "command": "CLI_PATH=./src/main.js NODE_SERVICE=cli npx nestjs-command",
     "dev:command": "CLI_PATH=./src/main.ts NODE_SERVICE=cli npx nestjs-command",
+    {% endif %}
     "test": "jest --config ./test/jest.config.js --passWithNoTests",
     "test:watch": "jest --config ./test/jest.config.js --watch --passWithNoTests",
     "test:cov": "jest --config ./test/jest.config.js --coverage"
@@ -16,8 +18,6 @@
   "engines": {
     "node": ">=12"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
+  "implicitDependencies": {
   }
 }
