--- a/packages/nx-nest/src/schematics/application/files/src/server/graphql-setup__graphql__.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/server/graphql-setup__graphql__.ts.j2
@@ -3,11 +3,11 @@ import { FastifyRequest } from 'fastify'
 import { GraphQLError, GraphQLFormattedError } from 'graphql'
 
 // add RequestGenericInterface back with Fastify3
-export async function graphqlContextParser ({ req }: { req: FastifyRequest<any> }): Promise<FastifyRequest<any> & Record<string, any>> {
+export async function graphQLContextParser ({ req }: { req: FastifyRequest<any> }): Promise<FastifyRequest<any> & Record<string, any>> {
   return { ...req }
 }
 
-export function graphqlErrorParser (exception: GraphQLError): GraphQLFormattedError<Record<string, any>> {
+export function graphQLErrorParser (exception: GraphQLError): GraphQLFormattedError<Record<string, any>> {
     // to convert this to enriched exception,
     // graphql handles all the errors internally, graphql exception filter is just for catching the rest of the http errors
     return {
