--- a/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.schema.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.schema.ts.j2
@@ -1,7 +1,7 @@
 import { Field, ObjectType } from '@nestjs/graphql'
 
 @ObjectType()
-export class DefaultSchema {
+export class {{ casing.pascal }}Schema {
   @Field({ nullable: true })
   response: string
 }
