--- a/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.controller.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.controller.ts.j2
@@ -2,7 +2,7 @@ import { AuthServiceRequests, AuthServiceRequestsTypes } from '@fullctrl/be-comm
 import { Controller } from '@nestjs/common'
 import { MessagePattern } from '@nestjs/microservices'
 
-import { DefaultMicroservice } from './default.service'
+import { DefaultMicroservice } from './__default__.service'
 
 @Controller()
 export class DefaultMicrocontroller {
