--- a/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.command.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.command.ts.j2
@@ -7,7 +7,7 @@ import { Command, Positional } from 'nestjs-command'
  */
 
 @Injectable()
-export class DefaultService {
+export class {{ casing.pascal }}Command {
   private logger: Logger = new Logger(this.constructor.name)
 
   @Command({
