--- a/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.module.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.module.ts.j2
@@ -1,7 +1,7 @@
 import { Module } from '@nestjs/common'
 
-import { DefaultMicrocontroller } from './default.controller'
-import { DefaultMicroservice } from './default.service'
+import { DefaultMicrocontroller } from './__default__.controller'
+import { DefaultMicroservice } from './__default__.service'
 
 @Module({
   imports: [],
